--- a/moments/Base.lproj/Main.storyboard
+++ b/moments/Base.lproj/Main.storyboard
@@ -18,21 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qv-B6-lFs">
-                                <rect key="frame" x="42" y="256" width="237" height="56"/>
-                                <state key="normal" title="Sign in with Facebook" image="fb_login"/>
-                                <connections>
-                                    <action selector="SignIn:" destination="e9V-yt-wi6" eventType="touchUpInside" id="VCu-jN-KG8"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pyo-nM-dTX">
+                                <rect key="frame" x="42" y="256" width="757" height="124"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qv-B6-lFs">
+                                        <rect key="frame" x="0.0" y="0.0" width="757" height="124"/>
+                                        <state key="normal" title="Sign in with Facebook" image="fb_login"/>
+                                        <connections>
+                                            <action selector="SignIn:" destination="e9V-yt-wi6" eventType="touchUpInside" id="VCu-jN-KG8"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="4qv-B6-lFs" firstAttribute="top" secondItem="EZF-BK-lgu" secondAttribute="bottom" constant="236" id="EL5-H3-AJd"/>
-                            <constraint firstItem="haL-Sd-Kfb" firstAttribute="top" secondItem="4qv-B6-lFs" secondAttribute="bottom" constant="355" id="eLt-m9-ryF"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="4qv-B6-lFs" secondAttribute="trailing" constant="80" id="h4j-Td-CIP"/>
-                            <constraint firstItem="4qv-B6-lFs" firstAttribute="leading" secondItem="YoR-tc-faO" secondAttribute="leadingMargin" constant="26" id="pem-te-Pl2"/>
-                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
@@ -55,11 +54,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="daW-g0-znu">
-                                <rect key="frame" x="0.0" y="28" width="375" height="639"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="daW-g0-znu">
+                                <rect key="frame" x="0.0" y="28" width="375" height="568"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rsK-Ol-Re6">
-                                <rect key="frame" x="205" y="612" width="150" height="35"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rsK-Ol-Re6">
+                                <rect key="frame" x="103" y="612" width="168" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="crj-h3-2vh"/>
                                 </constraints>
@@ -88,7 +87,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="210.9375" y="-226.58450704225351"/>
+            <point key="canvasLocation" x="210.5" y="-227.5"/>
         </scene>
         <!--Create Moment Controller-->
         <scene sceneID="Mdv-Q8-iRT">
@@ -103,8 +102,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FGF-4T-9ZN">
-                                <rect key="frame" x="0.0" y="20" width="375" height="216"/>
+                                <rect key="frame" x="0.0" y="49" width="375" height="216"/>
                             </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="How Are You Feeling?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xOR-p4-QCr">
+                                <rect key="frame" x="9" y="49" width="166" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.035912958115183247" green="0.035912958115183247" blue="0.035912958115183247" alpha="1" colorSpace="calibratedRGB"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Describe Your Moment..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMf-Bm-YQB">
+                                <rect key="frame" x="9" y="273" width="189" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3yZ-JB-v6H">
+                                <rect key="frame" x="9" y="319" width="346" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" spellCheckingType="yes" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
