--- a/moments/Base.lproj/Main.storyboard
+++ b/moments/Base.lproj/Main.storyboard
@@ -126,6 +126,7 @@
                                 <state key="normal" title="Create Moment"/>
                                 <connections>
                                     <action selector="createMoment:" destination="kzz-yk-NdL" eventType="touchUpInside" id="aKd-MH-yFA"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="submitMoment" id="1Zi-mv-fvS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -146,4 +147,7 @@
     <resources>
         <image name="fb_login" width="580" height="124"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="1Zi-mv-fvS"/>
+    </inferredMetricsTieBreakers>
 </document>
